--- a/index.html
+++ b/index.html
@@ -2,9 +2,16 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
+    you gotta link the css to the index.html
+    <link rel="stylesheet" href="/css/main.css">
     <title></title>
   </head>
   <body>
-<h1>Camren Design</h1>
+<div class="bg-image"></div>
+
+<div class="bg-text">
+  <h1>I am Camren M. Browne</h1>
+  <p>And I'm a Product Designer</p>
+</div>
   </body>
 </html>
