--- a/index.html
+++ b/index.html
@@ -2,14 +2,13 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    you gotta link the css to the index.html
     <link rel="stylesheet" href="/css/main.css">
     <title></title>
   </head>
   <body>
-<div class="bg-image"></div>
+<div class="../images/10.jpg"></div>
 
-<div class="bg-text">
+<div class="helvetica">
   <h1>I am Camren M. Browne</h1>
   <p>And I'm a Product Designer</p>
 </div>
