--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@ body, html {
 
 .bg-image {
   /* The image used */
-  background-image: url("photographer.jpg");
+  background-image:url("image/10.jpg");
 
   /* Add the blur effect */
   filter: blur(8px);
@@ -54,8 +54,8 @@ body, html {
 
 <div class="bg-text">
   <h2>UX/Product Designer</h2>
-  <h1 style="font-size:50px">I am Camren M. Browne</h1>
-  <p>Under Construction...</p>
+  <h1 style="font-size:50px">Camren M. Browne</h1>
+  <p>Site Under Construction...</p>
 </div>
 
 </body>
